infrastructure/gitops/infrastructure/qdrant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qdrant
  namespace: database
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - qdrant.almckay.io
      secretName: qdrant-tls  # pragma: allowlist secret
  rules:
    - host: qdrant.almckay.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qdrant
                port:
                  number: 6333
